diesel-builders/tests/ui_nightly/pk_default_error.stderr
error: Surrogate primary key cannot have a `default` value
 --> tests/ui_nightly/pk_default_error.rs:7:5
  |
7 | /     #[table_model(default = 1)]
8 | |     pub id: i32,
  | |_______________^
